[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/themes/UI.tres" type="Theme" id=1]
[ext_resource path="res://src/menu/StoreMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/pickups/coin_26.png" type="Texture" id=3]
[ext_resource path="res://src/menu/PurchaseChoice.tscn" type="PackedScene" id=4]

[node name="StoreMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.862745 )
script = ExtResource( 2 )

[node name="Close" type="Button" parent="."]
margin_left = 80.0
margin_top = 560.0
margin_right = 280.0
margin_bottom = 610.0
text = "CLOSE"

[node name="Coins" type="HBoxContainer" parent="."]
margin_left = 45.0
margin_top = 45.0
margin_right = 90.0
margin_bottom = 85.0

[node name="TextureRect" type="TextureRect" parent="Coins"]
margin_right = 19.0
margin_bottom = 40.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Text" type="Label" parent="Coins"]
margin_left = 23.0
margin_top = 8.0
margin_right = 71.0
margin_bottom = 32.0
text = "Coins:"

[node name="Label" type="Label" parent="Coins"]
margin_left = 75.0
margin_top = 8.0
margin_right = 97.0
margin_bottom = 32.0
text = "00"

[node name="Confirmation" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="Confirmation"]
margin_left = 16.0
margin_top = 32.0
margin_right = 240.0
margin_bottom = 128.0
text = "Buy %Upgrade Level 1% for %n% Coins?"
align = 1
autowrap = true

[node name="Options" type="VBoxContainer" parent="Confirmation"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.5
margin_top = -96.0
margin_right = 47.5
margin_bottom = -12.0

[node name="Buy" type="Button" parent="Confirmation/Options"]
margin_right = 95.5751
margin_bottom = 40.3475
text = "PURCHASE"

[node name="Cancel" type="Button" parent="Confirmation/Options"]
margin_top = 44.0
margin_right = 95.0
margin_bottom = 84.3475
text = "CANCEL"

[node name="PurchaseOptions" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -206.0
margin_right = 100.0
margin_bottom = 206.0

[node name="PurchaseChoice" parent="PurchaseOptions" instance=ExtResource( 4 )]

[node name="PurchaseChoice2" parent="PurchaseOptions" instance=ExtResource( 4 )]
margin_top = 104.0
margin_bottom = 204.0

[node name="PurchaseChoice3" parent="PurchaseOptions" instance=ExtResource( 4 )]
margin_top = 208.0
margin_bottom = 308.0

[node name="PurchaseChoice4" parent="PurchaseOptions" instance=ExtResource( 4 )]
margin_top = 312.0
margin_bottom = 412.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_bottom = 40.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 4.0
margin_top = 8.0
margin_right = 4.0
margin_bottom = 32.0

[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Confirmation/Options/Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="Confirmation/Options/Cancel" to="." method="_on_Cancel_pressed"]
